crates/nash-parse/src/expression/snapshots/nash_parse__expression__macro___tests__empty.snap
---
source: crates/nash-parse/src/expression/macro_.rs
description: "Code:\n\nm!()"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 5,
        },
    },
    value: MacroCall {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: "m",
        },
        module: None,
        args: [],
    },
}
