crates/nash-parse/src/expression/snapshots/nash_parse__expression__macro___tests__error_double_comma.snap
---
source: crates/nash-parse/src/expression/macro_.rs
description: "Code:\n\nm!(1,,2)"
info: diagnostic
---
nash::syntax

  × Expected an expression in a macro invocation.
   ╭─[src/Main.nash:1:6]
 1 │ m!(1,,2)
   ·      ─
   ╰────
  help: Add an expression or `todo` for an unfinished body.
