crates/nash-parse/src/expression/snapshots/nash_parse__expression__macro___tests__error_trailing_comma.snap
---
source: crates/nash-parse/src/expression/macro_.rs
description: "Code:\n\nm!(1,)"
---
Macro(
    Arg(
        Start(
            1,
            6,
        ),
        1,
        6,
    ),
    1,
    2,
)
