crates/nash-parse/src/expression/snapshots/nash_parse__expression__macro___tests__error_unclosed.snap
---
source: crates/nash-parse/src/expression/macro_.rs
description: "Code:\n\nm!("
info: diagnostic
---
nash::syntax

  × Expected `(` after the macro marker `!`.
   ╭─[src/Main.nash:1:4]
 1 │ m!(
   ·    ─
   ╰────
  help: Write `name!(arguments)`.
