crates/nash-parse/src/expression/snapshots/nash_parse__expression__macro___tests__several_arguments.snap
---
source: crates/nash-parse/src/expression/macro_.rs
description: "Code:\n\nm!(1, \"two\", x)"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 16,
        },
    },
    value: MacroCall {
        name: Located {
            region: Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 2,
                },
            },
            value: "m",
        },
        module: None,
        args: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 4,
                    },
                    end: Position {
                        line: 1,
                        column: 5,
                    },
                },
                value: Int(
                    1,
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 7,
                    },
                    end: Position {
                        line: 1,
                        column: 12,
                    },
                },
                value: Str(
                    "two",
                ),
            },
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 14,
                    },
                    end: Position {
                        line: 1,
                        column: 15,
                    },
                },
                value: Var {
                    kind: LowVar,
                    name: "x",
                },
            },
        ],
    },
}
